@@ -48,7 +48,10 @@ public class GMConfiguration {
         } catch (Exception ex) {
             throw new IllegalArgumentException("The following file couldn't pass on Parser.\n" + configFile.getPath(), ex);
         }
+        
+        // Setup defaults
         adjustLoggerLevel();
+        plugin.setValidateOnlinePlayer(isToggleValidate());
     }
     
     public boolean isOpOverride() {
@@ -56,6 +59,9 @@ public class GMConfiguration {
     }
     public boolean isBukkitPermsOverride() {
     	return GMconfig.getBoolean("settings.config.bukkit_perms_override", false);
+    }
+    public boolean isToggleValidate() {
+    	return GMconfig.getBoolean("settings.config.validate_toggle", true);
     }
 
 	public Map<String, Object> getMirrorsMap() {   
